# tripartite-rs

./: CHARTER.md  CLAUDE.md  CLAUDE_ECOSYSTEM_BACKUP.md  CLAUDE_MD_OLD.md  COMPETITIVE_ANALYSIS_NAMING.md  Cargo.toml  DOCKSIDE-EXAM.md  DOCUMENTATION_PLAYBOOK.md  DOCUMENTATION_QUICK_REFERENCE.md  ECOSYSTEM_DEPENDENCY_GRAPH.mmd  ECOSYSTEM_INDEX.md  ECOSYSTEM_QUICK_REF.md  ECOSYSTEM_QUICK_REFERENCE.md  ECOSYSTEM_RESEARCH_README.md  ECOSYSTEM_SUMMARY.md  ECOSYSTEM_SYSTEM_SUMMARY.md  ECOSYSTEM_VISUAL.txt  INDEPENDENT_TOOLS_NAMING_STRATEGY.md  INTEGRATION_PLAN_KNOWLEDGE_VAULT.md  MIGRATION_GUIDE_KNOWLEDGE_VAULT.md  NAMING_AT_A_GLANCE.md  NAMING_QUICK_REFERENCE.md  NAMING_STRATEGY_FILES.txt  NAMING_STRATEGY_SUMMARY.md  PRIVOX_EXTRACTION_COMPLETE.md  PRIVOX_EXTRACTION_PLAN.md  PRIVOX_QUICKSTART.md  PUBLISHING_CHECKLIST_KNOWLEDGE_VAULT.md  README.md  README_NAMING_STRATEGY.md  RELEASE_NOTES_KNOWLEDGE_VAULT.md  SUPERINSTANCE_ECOSYSTEM_ANALYSIS.md  TOOL_EXTRACTION_GUIDE.md  check-crate-availability.sh
crates/synesis-cli/: Cargo.toml
crates/synesis-cli/src/commands/: ask.rs
crates/synesis-cloud/: Cargo.toml
crates/synesis-cloud/tests/: phase2_privacy_verification.rs
crates/synesis-core/: Cargo.toml
crates/synesis-core/src/: error.rs
crates/synesis-core/src/consensus/: mod.rs
docs/: ECOSYSTEM.md
docs/architecture/: CROSS_REFERENCE_SYSTEM.md  ECOSYSTEM_AUTOMATION.md  ECOSYSTEM_GUIDE.md  GITHUB_TOPICS_STRATEGY.md  README_STANDARDS.md
docs/diagrams/: dependency-graph.dot  dependency-graph.mermaid  dependency-graph.puml  dependency-graph.txt  usage-graph.mermaid
docs/guides/: CLI_USER_GUIDE.md
knowledge-vault-rs/: .gitignore  CI_CDR_SETUP_REPORT.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
knowledge-vault-rs/.github/: dependabot.yml
knowledge-vault-rs/.github/workflows/: ci.yml  security.yml
knowledge-vault-rs/benches/: knowledge_bench.rs
knowledge-vault-rs/examples/: basic.rs  chunking.rs  embeddings.rs  search.rs  watcher.rs
knowledge-vault-rs/src/: chunker.rs  embeddings.rs  indexer.rs  lib.rs  search.rs  vault.rs  watcher.rs
privox/: CI_CD_SETUP_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  MIGRATION_GUIDE.md  PUBLISHING_CHECKLIST.md  README.md  RELEASE_NOTES.md
privox/.github/workflows/: ci.yml  security.yml
privox/benches/: redaction.rs
privox/docs/: getting_started.md
privox/examples/: basic.rs  basic_redaction.rs  custom_patterns.rs  integration.rs  pattern_detection.rs  server.rs  stream.rs
privox/src/: lib.rs  main.rs  patterns.rs  redactor.rs  vault.rs
scripts/ecosystem/: README.md  check-links.sh  generate-badges.sh  generate-deps-graph.sh  validate-ecosystem.sh
status/: AGENT_3.2_DOCUMENTATION_COMPLETE.md  PRIVOX_EXTRACTION_COMPLETE.md  ROUND_1_PRIVOX_COMPLETE.md
templates/: 00_START_HERE.md  CRATE_EXAMPLE_README.md  CRATE_QUICK_REFERENCE.md  EXTRACTION_CHECKLIST.md  README.md  STANDALONE_CRATE_TEMPLATE.md  TEMPLATE_SUMMARY.md  VISUAL_STRUCTURE.md
tools/: CONSENSUS_ENGINE_TOOL.md  KNOWLEDGE_VAULT_TOOL.md  PRIVACY_PROXY_TOOL.md
tools/privox/: .gitignore  Cargo.toml  README.md
tools/privox/benches/: redaction.rs
tools/privox/examples/: basic.rs  custom_patterns.rs  stream.rs
tools/privox/src/: lib.rs
tripartite-rs/: .gitignore  AGENT_2.4_COMPLETION_REPORT.md  CI_CDR_SETUP_REPORT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  EXTRACTION_COMPLETE.md  INTEGRATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  PUBLISHING_CHECKLIST.md  README.md  RELEASE_NOTES.md
tripartite-rs/.github/workflows/: ci.yml  security.yml
tripartite-rs/benches/: consensus.rs
tripartite-rs/examples/: basic.rs  ml_ensembling.rs  multi_round.rs  veto.rs  weighted_voting.rs
tripartite-rs/src/: agent.rs  consensus.rs  error.rs  lib.rs  manifest.rs
