[package]
name = "privox"
version = "0.1.0"
description = "Privacy proxy and redaction engine for LLM applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/privox"
authors = ["SuperInstance Team"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = "0.31"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
once_cell = "1"
thiserror = "1"
anyhow = "1"
hex = "0.4"
warp = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
server = ["warp"]

[[bench]]
name = "redaction"
harness = false
required-features = []

[[example]]
name = "server"
required-features = ["server"]

[[bin]]
name = "privox"
path = "src/main.rs"

[lib]
name = "privox"
path = "src/lib.rs"

