[workspace]
[package]
name = "tripartite-rs"
version = "0.1.0"
description = "Generic multi-agent consensus system for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/tripartite-rs"
authors = ["SuperInstance Team"]
edition = "2021"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tracing-subscriber = "0.3"

[[bench]]
name = "consensus"
harness = false

[lib]
name = "tripartite"
path = "src/lib.rs"

[features]
default = []
