[package]
name = "synesis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for SuperInstance AI"

[[bin]]
name = "synesis"
path = "src/main.rs"

[dependencies]
# Workspace crates
synesis-core.workspace = true
synesis-models.workspace = true
synesis-knowledge.workspace = true

# External crates (privox = synesis-privacy extracted)
privox.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# CLI
clap.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Directories
dirs.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
