[package]
name = "synesis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core orchestration engine for SuperInstance AI"

[dependencies]
# Workspace crates
synesis-models.workspace = true
synesis-knowledge.workspace = true

# External crates (privox = synesis-privacy extracted)
privox.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Database errors (for From<rusqlite::Error>)
rusqlite.workspace = true

# HTTP errors (for From<reqwest::Error>)
reqwest.workspace = true

# Logging
tracing.workspace = true

# Async trait
async-trait.workspace = true

# IDs
uuid.workspace = true

# Time
chrono.workspace = true

# Crypto hashing
sha2.workspace = true
hex.workspace = true

# Regex
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
